backend/analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instruccion instrucciones
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> comando parametros
Rule 4     instruccion -> comando
Rule 5     comando -> MKDISK
Rule 6     comando -> RMDISK
Rule 7     comando -> FDISK
Rule 8     comando -> MOUNT
Rule 9     comando -> UNMOUNT
Rule 10    comando -> MKFS
Rule 11    comando -> LOGIN
Rule 12    comando -> LOGOUT
Rule 13    comando -> MKGRP
Rule 14    comando -> RMGRP
Rule 15    comando -> MKUSR
Rule 16    comando -> RMUSR
Rule 17    comando -> MKFILE
Rule 18    comando -> MKDIR
Rule 19    comando -> PAUSE
Rule 20    comando -> EXECUTE
Rule 21    comando -> REP
Rule 22    comando -> COMENTARIO
Rule 23    parametros -> parametro parametros
Rule 24    parametros -> parametro
Rule 25    parametro -> argumento
Rule 26    parametro -> opcion
Rule 27    argumento -> GUION param IGUAL valor
Rule 28    param -> SIZE
Rule 29    param -> PATH
Rule 30    param -> FIT
Rule 31    param -> UNIT
Rule 32    param -> NAME
Rule 33    param -> TYPE
Rule 34    param -> ID
Rule 35    param -> USER
Rule 36    param -> PASS
Rule 37    param -> GRP
Rule 38    param -> CONT
Rule 39    param -> RUTA
Rule 40    valor -> ENTERO
Rule 41    valor -> RUTA_ARCHIVO
Rule 42    valor -> RUTA_CARPETA
Rule 43    valor -> NOMBRE_ARCHIVO
Rule 44    valor -> CADENA
Rule 45    opcion -> GUION R

Terminals, with rules where they appear

CADENA               : 44
COMENTARIO           : 22
CONT                 : 38
ENTERO               : 40
EXECUTE              : 20
FDISK                : 7
FIT                  : 30
GRP                  : 37
GUION                : 27 45
ID                   : 34
IGUAL                : 27
LOGIN                : 11
LOGOUT               : 12
MKDIR                : 18
MKDISK               : 5
MKFILE               : 17
MKFS                 : 10
MKGRP                : 13
MKUSR                : 15
MOUNT                : 8
NAME                 : 32
NOMBRE_ARCHIVO       : 43
PASS                 : 36
PATH                 : 29
PAUSE                : 19
R                    : 45
REP                  : 21
RMDISK               : 6
RMGRP                : 14
RMUSR                : 16
RUTA                 : 39
RUTA_ARCHIVO         : 41
RUTA_CARPETA         : 42
SIZE                 : 28
TYPE                 : 33
UNIT                 : 31
UNMOUNT              : 9
USER                 : 35
error                : 

Nonterminals, with rules where they appear

argumento            : 25
comando              : 3 4
instruccion          : 1 2
instrucciones        : 1 0
opcion               : 26
param                : 27
parametro            : 23 24
parametros           : 3 23
valor                : 27

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instruccion instrucciones
    (2) instrucciones -> . instruccion
    (3) instruccion -> . comando parametros
    (4) instruccion -> . comando
    (5) comando -> . MKDISK
    (6) comando -> . RMDISK
    (7) comando -> . FDISK
    (8) comando -> . MOUNT
    (9) comando -> . UNMOUNT
    (10) comando -> . MKFS
    (11) comando -> . LOGIN
    (12) comando -> . LOGOUT
    (13) comando -> . MKGRP
    (14) comando -> . RMGRP
    (15) comando -> . MKUSR
    (16) comando -> . RMUSR
    (17) comando -> . MKFILE
    (18) comando -> . MKDIR
    (19) comando -> . PAUSE
    (20) comando -> . EXECUTE
    (21) comando -> . REP
    (22) comando -> . COMENTARIO

    MKDISK          shift and go to state 4
    RMDISK          shift and go to state 5
    FDISK           shift and go to state 6
    MOUNT           shift and go to state 7
    UNMOUNT         shift and go to state 8
    MKFS            shift and go to state 9
    LOGIN           shift and go to state 10
    LOGOUT          shift and go to state 11
    MKGRP           shift and go to state 12
    RMGRP           shift and go to state 13
    MKUSR           shift and go to state 14
    RMUSR           shift and go to state 15
    MKFILE          shift and go to state 16
    MKDIR           shift and go to state 17
    PAUSE           shift and go to state 18
    EXECUTE         shift and go to state 19
    REP             shift and go to state 20
    COMENTARIO      shift and go to state 21

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2
    comando                        shift and go to state 3

state 1

    (0) S' -> instrucciones .



state 2

    (1) instrucciones -> instruccion . instrucciones
    (2) instrucciones -> instruccion .
    (1) instrucciones -> . instruccion instrucciones
    (2) instrucciones -> . instruccion
    (3) instruccion -> . comando parametros
    (4) instruccion -> . comando
    (5) comando -> . MKDISK
    (6) comando -> . RMDISK
    (7) comando -> . FDISK
    (8) comando -> . MOUNT
    (9) comando -> . UNMOUNT
    (10) comando -> . MKFS
    (11) comando -> . LOGIN
    (12) comando -> . LOGOUT
    (13) comando -> . MKGRP
    (14) comando -> . RMGRP
    (15) comando -> . MKUSR
    (16) comando -> . RMUSR
    (17) comando -> . MKFILE
    (18) comando -> . MKDIR
    (19) comando -> . PAUSE
    (20) comando -> . EXECUTE
    (21) comando -> . REP
    (22) comando -> . COMENTARIO

    $end            reduce using rule 2 (instrucciones -> instruccion .)
    MKDISK          shift and go to state 4
    RMDISK          shift and go to state 5
    FDISK           shift and go to state 6
    MOUNT           shift and go to state 7
    UNMOUNT         shift and go to state 8
    MKFS            shift and go to state 9
    LOGIN           shift and go to state 10
    LOGOUT          shift and go to state 11
    MKGRP           shift and go to state 12
    RMGRP           shift and go to state 13
    MKUSR           shift and go to state 14
    RMUSR           shift and go to state 15
    MKFILE          shift and go to state 16
    MKDIR           shift and go to state 17
    PAUSE           shift and go to state 18
    EXECUTE         shift and go to state 19
    REP             shift and go to state 20
    COMENTARIO      shift and go to state 21

    instruccion                    shift and go to state 2
    instrucciones                  shift and go to state 22
    comando                        shift and go to state 3

state 3

    (3) instruccion -> comando . parametros
    (4) instruccion -> comando .
    (23) parametros -> . parametro parametros
    (24) parametros -> . parametro
    (25) parametro -> . argumento
    (26) parametro -> . opcion
    (27) argumento -> . GUION param IGUAL valor
    (45) opcion -> . GUION R

    MKDISK          reduce using rule 4 (instruccion -> comando .)
    RMDISK          reduce using rule 4 (instruccion -> comando .)
    FDISK           reduce using rule 4 (instruccion -> comando .)
    MOUNT           reduce using rule 4 (instruccion -> comando .)
    UNMOUNT         reduce using rule 4 (instruccion -> comando .)
    MKFS            reduce using rule 4 (instruccion -> comando .)
    LOGIN           reduce using rule 4 (instruccion -> comando .)
    LOGOUT          reduce using rule 4 (instruccion -> comando .)
    MKGRP           reduce using rule 4 (instruccion -> comando .)
    RMGRP           reduce using rule 4 (instruccion -> comando .)
    MKUSR           reduce using rule 4 (instruccion -> comando .)
    RMUSR           reduce using rule 4 (instruccion -> comando .)
    MKFILE          reduce using rule 4 (instruccion -> comando .)
    MKDIR           reduce using rule 4 (instruccion -> comando .)
    PAUSE           reduce using rule 4 (instruccion -> comando .)
    EXECUTE         reduce using rule 4 (instruccion -> comando .)
    REP             reduce using rule 4 (instruccion -> comando .)
    COMENTARIO      reduce using rule 4 (instruccion -> comando .)
    $end            reduce using rule 4 (instruccion -> comando .)
    GUION           shift and go to state 27

    parametros                     shift and go to state 23
    parametro                      shift and go to state 24
    argumento                      shift and go to state 25
    opcion                         shift and go to state 26

state 4

    (5) comando -> MKDISK .

    GUION           reduce using rule 5 (comando -> MKDISK .)
    MKDISK          reduce using rule 5 (comando -> MKDISK .)
    RMDISK          reduce using rule 5 (comando -> MKDISK .)
    FDISK           reduce using rule 5 (comando -> MKDISK .)
    MOUNT           reduce using rule 5 (comando -> MKDISK .)
    UNMOUNT         reduce using rule 5 (comando -> MKDISK .)
    MKFS            reduce using rule 5 (comando -> MKDISK .)
    LOGIN           reduce using rule 5 (comando -> MKDISK .)
    LOGOUT          reduce using rule 5 (comando -> MKDISK .)
    MKGRP           reduce using rule 5 (comando -> MKDISK .)
    RMGRP           reduce using rule 5 (comando -> MKDISK .)
    MKUSR           reduce using rule 5 (comando -> MKDISK .)
    RMUSR           reduce using rule 5 (comando -> MKDISK .)
    MKFILE          reduce using rule 5 (comando -> MKDISK .)
    MKDIR           reduce using rule 5 (comando -> MKDISK .)
    PAUSE           reduce using rule 5 (comando -> MKDISK .)
    EXECUTE         reduce using rule 5 (comando -> MKDISK .)
    REP             reduce using rule 5 (comando -> MKDISK .)
    COMENTARIO      reduce using rule 5 (comando -> MKDISK .)
    $end            reduce using rule 5 (comando -> MKDISK .)


state 5

    (6) comando -> RMDISK .

    GUION           reduce using rule 6 (comando -> RMDISK .)
    MKDISK          reduce using rule 6 (comando -> RMDISK .)
    RMDISK          reduce using rule 6 (comando -> RMDISK .)
    FDISK           reduce using rule 6 (comando -> RMDISK .)
    MOUNT           reduce using rule 6 (comando -> RMDISK .)
    UNMOUNT         reduce using rule 6 (comando -> RMDISK .)
    MKFS            reduce using rule 6 (comando -> RMDISK .)
    LOGIN           reduce using rule 6 (comando -> RMDISK .)
    LOGOUT          reduce using rule 6 (comando -> RMDISK .)
    MKGRP           reduce using rule 6 (comando -> RMDISK .)
    RMGRP           reduce using rule 6 (comando -> RMDISK .)
    MKUSR           reduce using rule 6 (comando -> RMDISK .)
    RMUSR           reduce using rule 6 (comando -> RMDISK .)
    MKFILE          reduce using rule 6 (comando -> RMDISK .)
    MKDIR           reduce using rule 6 (comando -> RMDISK .)
    PAUSE           reduce using rule 6 (comando -> RMDISK .)
    EXECUTE         reduce using rule 6 (comando -> RMDISK .)
    REP             reduce using rule 6 (comando -> RMDISK .)
    COMENTARIO      reduce using rule 6 (comando -> RMDISK .)
    $end            reduce using rule 6 (comando -> RMDISK .)


state 6

    (7) comando -> FDISK .

    GUION           reduce using rule 7 (comando -> FDISK .)
    MKDISK          reduce using rule 7 (comando -> FDISK .)
    RMDISK          reduce using rule 7 (comando -> FDISK .)
    FDISK           reduce using rule 7 (comando -> FDISK .)
    MOUNT           reduce using rule 7 (comando -> FDISK .)
    UNMOUNT         reduce using rule 7 (comando -> FDISK .)
    MKFS            reduce using rule 7 (comando -> FDISK .)
    LOGIN           reduce using rule 7 (comando -> FDISK .)
    LOGOUT          reduce using rule 7 (comando -> FDISK .)
    MKGRP           reduce using rule 7 (comando -> FDISK .)
    RMGRP           reduce using rule 7 (comando -> FDISK .)
    MKUSR           reduce using rule 7 (comando -> FDISK .)
    RMUSR           reduce using rule 7 (comando -> FDISK .)
    MKFILE          reduce using rule 7 (comando -> FDISK .)
    MKDIR           reduce using rule 7 (comando -> FDISK .)
    PAUSE           reduce using rule 7 (comando -> FDISK .)
    EXECUTE         reduce using rule 7 (comando -> FDISK .)
    REP             reduce using rule 7 (comando -> FDISK .)
    COMENTARIO      reduce using rule 7 (comando -> FDISK .)
    $end            reduce using rule 7 (comando -> FDISK .)


state 7

    (8) comando -> MOUNT .

    GUION           reduce using rule 8 (comando -> MOUNT .)
    MKDISK          reduce using rule 8 (comando -> MOUNT .)
    RMDISK          reduce using rule 8 (comando -> MOUNT .)
    FDISK           reduce using rule 8 (comando -> MOUNT .)
    MOUNT           reduce using rule 8 (comando -> MOUNT .)
    UNMOUNT         reduce using rule 8 (comando -> MOUNT .)
    MKFS            reduce using rule 8 (comando -> MOUNT .)
    LOGIN           reduce using rule 8 (comando -> MOUNT .)
    LOGOUT          reduce using rule 8 (comando -> MOUNT .)
    MKGRP           reduce using rule 8 (comando -> MOUNT .)
    RMGRP           reduce using rule 8 (comando -> MOUNT .)
    MKUSR           reduce using rule 8 (comando -> MOUNT .)
    RMUSR           reduce using rule 8 (comando -> MOUNT .)
    MKFILE          reduce using rule 8 (comando -> MOUNT .)
    MKDIR           reduce using rule 8 (comando -> MOUNT .)
    PAUSE           reduce using rule 8 (comando -> MOUNT .)
    EXECUTE         reduce using rule 8 (comando -> MOUNT .)
    REP             reduce using rule 8 (comando -> MOUNT .)
    COMENTARIO      reduce using rule 8 (comando -> MOUNT .)
    $end            reduce using rule 8 (comando -> MOUNT .)


state 8

    (9) comando -> UNMOUNT .

    GUION           reduce using rule 9 (comando -> UNMOUNT .)
    MKDISK          reduce using rule 9 (comando -> UNMOUNT .)
    RMDISK          reduce using rule 9 (comando -> UNMOUNT .)
    FDISK           reduce using rule 9 (comando -> UNMOUNT .)
    MOUNT           reduce using rule 9 (comando -> UNMOUNT .)
    UNMOUNT         reduce using rule 9 (comando -> UNMOUNT .)
    MKFS            reduce using rule 9 (comando -> UNMOUNT .)
    LOGIN           reduce using rule 9 (comando -> UNMOUNT .)
    LOGOUT          reduce using rule 9 (comando -> UNMOUNT .)
    MKGRP           reduce using rule 9 (comando -> UNMOUNT .)
    RMGRP           reduce using rule 9 (comando -> UNMOUNT .)
    MKUSR           reduce using rule 9 (comando -> UNMOUNT .)
    RMUSR           reduce using rule 9 (comando -> UNMOUNT .)
    MKFILE          reduce using rule 9 (comando -> UNMOUNT .)
    MKDIR           reduce using rule 9 (comando -> UNMOUNT .)
    PAUSE           reduce using rule 9 (comando -> UNMOUNT .)
    EXECUTE         reduce using rule 9 (comando -> UNMOUNT .)
    REP             reduce using rule 9 (comando -> UNMOUNT .)
    COMENTARIO      reduce using rule 9 (comando -> UNMOUNT .)
    $end            reduce using rule 9 (comando -> UNMOUNT .)


state 9

    (10) comando -> MKFS .

    GUION           reduce using rule 10 (comando -> MKFS .)
    MKDISK          reduce using rule 10 (comando -> MKFS .)
    RMDISK          reduce using rule 10 (comando -> MKFS .)
    FDISK           reduce using rule 10 (comando -> MKFS .)
    MOUNT           reduce using rule 10 (comando -> MKFS .)
    UNMOUNT         reduce using rule 10 (comando -> MKFS .)
    MKFS            reduce using rule 10 (comando -> MKFS .)
    LOGIN           reduce using rule 10 (comando -> MKFS .)
    LOGOUT          reduce using rule 10 (comando -> MKFS .)
    MKGRP           reduce using rule 10 (comando -> MKFS .)
    RMGRP           reduce using rule 10 (comando -> MKFS .)
    MKUSR           reduce using rule 10 (comando -> MKFS .)
    RMUSR           reduce using rule 10 (comando -> MKFS .)
    MKFILE          reduce using rule 10 (comando -> MKFS .)
    MKDIR           reduce using rule 10 (comando -> MKFS .)
    PAUSE           reduce using rule 10 (comando -> MKFS .)
    EXECUTE         reduce using rule 10 (comando -> MKFS .)
    REP             reduce using rule 10 (comando -> MKFS .)
    COMENTARIO      reduce using rule 10 (comando -> MKFS .)
    $end            reduce using rule 10 (comando -> MKFS .)


state 10

    (11) comando -> LOGIN .

    GUION           reduce using rule 11 (comando -> LOGIN .)
    MKDISK          reduce using rule 11 (comando -> LOGIN .)
    RMDISK          reduce using rule 11 (comando -> LOGIN .)
    FDISK           reduce using rule 11 (comando -> LOGIN .)
    MOUNT           reduce using rule 11 (comando -> LOGIN .)
    UNMOUNT         reduce using rule 11 (comando -> LOGIN .)
    MKFS            reduce using rule 11 (comando -> LOGIN .)
    LOGIN           reduce using rule 11 (comando -> LOGIN .)
    LOGOUT          reduce using rule 11 (comando -> LOGIN .)
    MKGRP           reduce using rule 11 (comando -> LOGIN .)
    RMGRP           reduce using rule 11 (comando -> LOGIN .)
    MKUSR           reduce using rule 11 (comando -> LOGIN .)
    RMUSR           reduce using rule 11 (comando -> LOGIN .)
    MKFILE          reduce using rule 11 (comando -> LOGIN .)
    MKDIR           reduce using rule 11 (comando -> LOGIN .)
    PAUSE           reduce using rule 11 (comando -> LOGIN .)
    EXECUTE         reduce using rule 11 (comando -> LOGIN .)
    REP             reduce using rule 11 (comando -> LOGIN .)
    COMENTARIO      reduce using rule 11 (comando -> LOGIN .)
    $end            reduce using rule 11 (comando -> LOGIN .)


state 11

    (12) comando -> LOGOUT .

    GUION           reduce using rule 12 (comando -> LOGOUT .)
    MKDISK          reduce using rule 12 (comando -> LOGOUT .)
    RMDISK          reduce using rule 12 (comando -> LOGOUT .)
    FDISK           reduce using rule 12 (comando -> LOGOUT .)
    MOUNT           reduce using rule 12 (comando -> LOGOUT .)
    UNMOUNT         reduce using rule 12 (comando -> LOGOUT .)
    MKFS            reduce using rule 12 (comando -> LOGOUT .)
    LOGIN           reduce using rule 12 (comando -> LOGOUT .)
    LOGOUT          reduce using rule 12 (comando -> LOGOUT .)
    MKGRP           reduce using rule 12 (comando -> LOGOUT .)
    RMGRP           reduce using rule 12 (comando -> LOGOUT .)
    MKUSR           reduce using rule 12 (comando -> LOGOUT .)
    RMUSR           reduce using rule 12 (comando -> LOGOUT .)
    MKFILE          reduce using rule 12 (comando -> LOGOUT .)
    MKDIR           reduce using rule 12 (comando -> LOGOUT .)
    PAUSE           reduce using rule 12 (comando -> LOGOUT .)
    EXECUTE         reduce using rule 12 (comando -> LOGOUT .)
    REP             reduce using rule 12 (comando -> LOGOUT .)
    COMENTARIO      reduce using rule 12 (comando -> LOGOUT .)
    $end            reduce using rule 12 (comando -> LOGOUT .)


state 12

    (13) comando -> MKGRP .

    GUION           reduce using rule 13 (comando -> MKGRP .)
    MKDISK          reduce using rule 13 (comando -> MKGRP .)
    RMDISK          reduce using rule 13 (comando -> MKGRP .)
    FDISK           reduce using rule 13 (comando -> MKGRP .)
    MOUNT           reduce using rule 13 (comando -> MKGRP .)
    UNMOUNT         reduce using rule 13 (comando -> MKGRP .)
    MKFS            reduce using rule 13 (comando -> MKGRP .)
    LOGIN           reduce using rule 13 (comando -> MKGRP .)
    LOGOUT          reduce using rule 13 (comando -> MKGRP .)
    MKGRP           reduce using rule 13 (comando -> MKGRP .)
    RMGRP           reduce using rule 13 (comando -> MKGRP .)
    MKUSR           reduce using rule 13 (comando -> MKGRP .)
    RMUSR           reduce using rule 13 (comando -> MKGRP .)
    MKFILE          reduce using rule 13 (comando -> MKGRP .)
    MKDIR           reduce using rule 13 (comando -> MKGRP .)
    PAUSE           reduce using rule 13 (comando -> MKGRP .)
    EXECUTE         reduce using rule 13 (comando -> MKGRP .)
    REP             reduce using rule 13 (comando -> MKGRP .)
    COMENTARIO      reduce using rule 13 (comando -> MKGRP .)
    $end            reduce using rule 13 (comando -> MKGRP .)


state 13

    (14) comando -> RMGRP .

    GUION           reduce using rule 14 (comando -> RMGRP .)
    MKDISK          reduce using rule 14 (comando -> RMGRP .)
    RMDISK          reduce using rule 14 (comando -> RMGRP .)
    FDISK           reduce using rule 14 (comando -> RMGRP .)
    MOUNT           reduce using rule 14 (comando -> RMGRP .)
    UNMOUNT         reduce using rule 14 (comando -> RMGRP .)
    MKFS            reduce using rule 14 (comando -> RMGRP .)
    LOGIN           reduce using rule 14 (comando -> RMGRP .)
    LOGOUT          reduce using rule 14 (comando -> RMGRP .)
    MKGRP           reduce using rule 14 (comando -> RMGRP .)
    RMGRP           reduce using rule 14 (comando -> RMGRP .)
    MKUSR           reduce using rule 14 (comando -> RMGRP .)
    RMUSR           reduce using rule 14 (comando -> RMGRP .)
    MKFILE          reduce using rule 14 (comando -> RMGRP .)
    MKDIR           reduce using rule 14 (comando -> RMGRP .)
    PAUSE           reduce using rule 14 (comando -> RMGRP .)
    EXECUTE         reduce using rule 14 (comando -> RMGRP .)
    REP             reduce using rule 14 (comando -> RMGRP .)
    COMENTARIO      reduce using rule 14 (comando -> RMGRP .)
    $end            reduce using rule 14 (comando -> RMGRP .)


state 14

    (15) comando -> MKUSR .

    GUION           reduce using rule 15 (comando -> MKUSR .)
    MKDISK          reduce using rule 15 (comando -> MKUSR .)
    RMDISK          reduce using rule 15 (comando -> MKUSR .)
    FDISK           reduce using rule 15 (comando -> MKUSR .)
    MOUNT           reduce using rule 15 (comando -> MKUSR .)
    UNMOUNT         reduce using rule 15 (comando -> MKUSR .)
    MKFS            reduce using rule 15 (comando -> MKUSR .)
    LOGIN           reduce using rule 15 (comando -> MKUSR .)
    LOGOUT          reduce using rule 15 (comando -> MKUSR .)
    MKGRP           reduce using rule 15 (comando -> MKUSR .)
    RMGRP           reduce using rule 15 (comando -> MKUSR .)
    MKUSR           reduce using rule 15 (comando -> MKUSR .)
    RMUSR           reduce using rule 15 (comando -> MKUSR .)
    MKFILE          reduce using rule 15 (comando -> MKUSR .)
    MKDIR           reduce using rule 15 (comando -> MKUSR .)
    PAUSE           reduce using rule 15 (comando -> MKUSR .)
    EXECUTE         reduce using rule 15 (comando -> MKUSR .)
    REP             reduce using rule 15 (comando -> MKUSR .)
    COMENTARIO      reduce using rule 15 (comando -> MKUSR .)
    $end            reduce using rule 15 (comando -> MKUSR .)


state 15

    (16) comando -> RMUSR .

    GUION           reduce using rule 16 (comando -> RMUSR .)
    MKDISK          reduce using rule 16 (comando -> RMUSR .)
    RMDISK          reduce using rule 16 (comando -> RMUSR .)
    FDISK           reduce using rule 16 (comando -> RMUSR .)
    MOUNT           reduce using rule 16 (comando -> RMUSR .)
    UNMOUNT         reduce using rule 16 (comando -> RMUSR .)
    MKFS            reduce using rule 16 (comando -> RMUSR .)
    LOGIN           reduce using rule 16 (comando -> RMUSR .)
    LOGOUT          reduce using rule 16 (comando -> RMUSR .)
    MKGRP           reduce using rule 16 (comando -> RMUSR .)
    RMGRP           reduce using rule 16 (comando -> RMUSR .)
    MKUSR           reduce using rule 16 (comando -> RMUSR .)
    RMUSR           reduce using rule 16 (comando -> RMUSR .)
    MKFILE          reduce using rule 16 (comando -> RMUSR .)
    MKDIR           reduce using rule 16 (comando -> RMUSR .)
    PAUSE           reduce using rule 16 (comando -> RMUSR .)
    EXECUTE         reduce using rule 16 (comando -> RMUSR .)
    REP             reduce using rule 16 (comando -> RMUSR .)
    COMENTARIO      reduce using rule 16 (comando -> RMUSR .)
    $end            reduce using rule 16 (comando -> RMUSR .)


state 16

    (17) comando -> MKFILE .

    GUION           reduce using rule 17 (comando -> MKFILE .)
    MKDISK          reduce using rule 17 (comando -> MKFILE .)
    RMDISK          reduce using rule 17 (comando -> MKFILE .)
    FDISK           reduce using rule 17 (comando -> MKFILE .)
    MOUNT           reduce using rule 17 (comando -> MKFILE .)
    UNMOUNT         reduce using rule 17 (comando -> MKFILE .)
    MKFS            reduce using rule 17 (comando -> MKFILE .)
    LOGIN           reduce using rule 17 (comando -> MKFILE .)
    LOGOUT          reduce using rule 17 (comando -> MKFILE .)
    MKGRP           reduce using rule 17 (comando -> MKFILE .)
    RMGRP           reduce using rule 17 (comando -> MKFILE .)
    MKUSR           reduce using rule 17 (comando -> MKFILE .)
    RMUSR           reduce using rule 17 (comando -> MKFILE .)
    MKFILE          reduce using rule 17 (comando -> MKFILE .)
    MKDIR           reduce using rule 17 (comando -> MKFILE .)
    PAUSE           reduce using rule 17 (comando -> MKFILE .)
    EXECUTE         reduce using rule 17 (comando -> MKFILE .)
    REP             reduce using rule 17 (comando -> MKFILE .)
    COMENTARIO      reduce using rule 17 (comando -> MKFILE .)
    $end            reduce using rule 17 (comando -> MKFILE .)


state 17

    (18) comando -> MKDIR .

    GUION           reduce using rule 18 (comando -> MKDIR .)
    MKDISK          reduce using rule 18 (comando -> MKDIR .)
    RMDISK          reduce using rule 18 (comando -> MKDIR .)
    FDISK           reduce using rule 18 (comando -> MKDIR .)
    MOUNT           reduce using rule 18 (comando -> MKDIR .)
    UNMOUNT         reduce using rule 18 (comando -> MKDIR .)
    MKFS            reduce using rule 18 (comando -> MKDIR .)
    LOGIN           reduce using rule 18 (comando -> MKDIR .)
    LOGOUT          reduce using rule 18 (comando -> MKDIR .)
    MKGRP           reduce using rule 18 (comando -> MKDIR .)
    RMGRP           reduce using rule 18 (comando -> MKDIR .)
    MKUSR           reduce using rule 18 (comando -> MKDIR .)
    RMUSR           reduce using rule 18 (comando -> MKDIR .)
    MKFILE          reduce using rule 18 (comando -> MKDIR .)
    MKDIR           reduce using rule 18 (comando -> MKDIR .)
    PAUSE           reduce using rule 18 (comando -> MKDIR .)
    EXECUTE         reduce using rule 18 (comando -> MKDIR .)
    REP             reduce using rule 18 (comando -> MKDIR .)
    COMENTARIO      reduce using rule 18 (comando -> MKDIR .)
    $end            reduce using rule 18 (comando -> MKDIR .)


state 18

    (19) comando -> PAUSE .

    GUION           reduce using rule 19 (comando -> PAUSE .)
    MKDISK          reduce using rule 19 (comando -> PAUSE .)
    RMDISK          reduce using rule 19 (comando -> PAUSE .)
    FDISK           reduce using rule 19 (comando -> PAUSE .)
    MOUNT           reduce using rule 19 (comando -> PAUSE .)
    UNMOUNT         reduce using rule 19 (comando -> PAUSE .)
    MKFS            reduce using rule 19 (comando -> PAUSE .)
    LOGIN           reduce using rule 19 (comando -> PAUSE .)
    LOGOUT          reduce using rule 19 (comando -> PAUSE .)
    MKGRP           reduce using rule 19 (comando -> PAUSE .)
    RMGRP           reduce using rule 19 (comando -> PAUSE .)
    MKUSR           reduce using rule 19 (comando -> PAUSE .)
    RMUSR           reduce using rule 19 (comando -> PAUSE .)
    MKFILE          reduce using rule 19 (comando -> PAUSE .)
    MKDIR           reduce using rule 19 (comando -> PAUSE .)
    PAUSE           reduce using rule 19 (comando -> PAUSE .)
    EXECUTE         reduce using rule 19 (comando -> PAUSE .)
    REP             reduce using rule 19 (comando -> PAUSE .)
    COMENTARIO      reduce using rule 19 (comando -> PAUSE .)
    $end            reduce using rule 19 (comando -> PAUSE .)


state 19

    (20) comando -> EXECUTE .
